# memory-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  simple_test.py  test_graph_conversion.py  test_server.py
src/memory_mcp/: __init__.py  server.py
