[project]
name = "memory-mcp"
version = "0.1.0"
description = "Memory management MCP server"
authors = [{name = "Perpetuum1101"}]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mcp[cli]>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
memory-mcp = "memory_mcp.server:mcp.run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
